# pyslam

./: .gitignore  README.md  pyproject.toml  requirements.txt
output/slam/: FS.asc  FS_convolve.asc  PoF.asc
output/static_maps/: dem_8_slope_angles.asc
preprocessing/: clc2000legend.csv  influxdb.ipynb  preprocessing.ipynb  requirements.txt
preprocessing/data/: stations.gpkg
pyslam/: _version.py  asc_grid.py  asc_indexed.py  calc_ligne.py  cn.py  creation_feuille_experience.py  crop.py  crop_classe.py  indirection.py  infiltration.py  properties.py  samplers.py  slam.py  slam_classe.py  static_maps.py  static_maps_classe.py  traitement.py
pyslam/gis/: fill_sink_calc.py
pyslam/io/: asc.py  maps.py  tif.py
pyslam/torch/: dataloadtest.py  dataset.py  dataset_fs.py  discriminator.py  generator.py
pyslam/utils/: config.py
scripts/: compare_images.py  compte_occupation_pixels_dataset.py  crop.py  feuille_exp.py  files.yml  main.py  main_old.py  mainclasses.py  maintestclasses.py  ouvre_fichiers.py  ouvre_image.py  slam.py  static_maps.py  static_maps_old.py
tests/: test_config.py  test_discriminator.py  test_generator.py  test_indirection.py  test_maps.py  test_properties.py
